Some new additions to code

--- a/src/main/LoginFrame.form
+++ b/src/main/LoginFrame.form
@@ -141,7 +141,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="fileChooserButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="35" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -166,7 +166,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="fileChooserButton">
               <Properties>
-                <Property name="text" type="java.lang.String" value="File Chooser"/>
+                <Property name="text" type="java.lang.String" value="Directory Chooser"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fileChooserButtonActionPerformed"/>
