--- a/src/main/MainFrame.form
+++ b/src/main/MainFrame.form
@@ -67,8 +67,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="employeeNumString" min="-2" pref="66" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -82,6 +82,7 @@
                   <Component id="startDatePicker" min="-2" max="-2" attributes="0"/>
                   <Component id="datePicker1" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="endDatePicker" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="recalculateData" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="53" max="32767" attributes="0"/>
           </Group>
@@ -109,6 +110,8 @@
                       <Component id="datePicker1" min="-2" pref="22" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="endDatePicker" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                      <Component id="recalculateData" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
@@ -118,7 +121,7 @@
                       <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                      <Component id="employeeNumString" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -175,12 +178,9 @@
         <Property name="text" type="java.lang.String" value="Number Of Employees"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Num Employees"/>
-      </Properties>
+    <Component class="javax.swing.JTextField" name="employeeNumString">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="employeeNumStringActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="datePicker">
@@ -201,6 +201,14 @@
     <Component class="org.jdesktop.swingx.JXDatePicker" name="endDatePicker">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="endDatePickerActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="recalculateData">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Recalculate"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="recalculateDataActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
